--- a/Biblo/biblography.tex
+++ b/Biblo/biblography.tex
@@ -16,9 +16,13 @@
 %\usepackage{hyperref}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
 		NeuroIncept Decoder for High-Fidelity Speech Reconstruction from Neural Activity\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
+	
+\title{NeuroIncept Decoder for High-Fidelity Speech Reconstruction from Neural Activity: Biblography Using bibitem}
+\author{Owais Mujtaba}
+
 \begin{document}
 	
-
+	\maketitle
 	
 	
 	% \vspace{-0.2cm}
