--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -1,10 +1,7 @@
 \documentclass[final]{beamer}
-
-\usepackage[size=a0,scale=1.4]{beamerposter} % Standard A0 size
-\usetheme{Madrid} % Base theme for structure
+\usepackage[size=a0,scale=1.4]{beamerposter}
+\usetheme{Madrid}
 \usecolortheme{beaver}
-
-% --- Packages ---
 \usepackage{multicol}
 \usepackage{booktabs}
 \usepackage{tcolorbox}
@@ -12,7 +9,9 @@
 \usepackage{colortbl}
 \usepackage{caption}
 
-% --- Customizing Colors ---
+
+
+
 \setbeamercolor{block title}{fg=white,bg=red!75!black}
 \setbeamercolor{block body}{fg=black,bg=gray!10}
 
@@ -21,9 +20,8 @@
 \institute{Network Science \& Geopolitics Department}
 
 \begin{document}
-	\begin{frame}[t] % [t] aligns content to the top
+	\begin{frame}[t] 
 		
-		% --- Header Region ---
 		\begin{tcolorbox}[colback=red!75!black, colframe=black, arc=0mm]
 			\centering
 			\color{white}
