--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -1,125 +1,191 @@
-\documentclass[final]{beamer}
-\usepackage[size=a0,scale=1.4]{beamerposter}
-\usetheme{Madrid}
-\usecolortheme{beaver}
-\usepackage{multicol}
-\usepackage{booktabs}
-\usepackage{tcolorbox}
+\documentclass[25pt, a0paper, portrait]{tikzposter}
+\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
-\usepackage{colortbl}
 \usepackage{caption}
+\usepackage{booktabs}
+\usepackage{xcolor}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{bm}
+\usepackage{cmbright}
 
 
+\title{\parbox{\linewidth}{\centering \textbf{The Architecture of Alignment:} \\ \huge Quantifying Geoeconomic Fragmentation}}
+\author{Owais Mujtaba}
+\institute{CITIC | University of Granada}
 
 
-\setbeamercolor{block title}{fg=white,bg=red!75!black}
-\setbeamercolor{block body}{fg=black,bg=gray!10}
+\definecolor{primary}{HTML}{1E1B4B}  
+\definecolor{accent}{HTML}{059669}  
+\definecolor{bgLight}{HTML}{F8FAFC}  
+\definecolor{blockTitle}{HTML}{F1F5F9}
 
-\title[Global Trade Dynamics]{Fragmentation Dynamics in Global Trade: G7 vs. BRICS+}
-\author{LaTeX Advanced Course Project}
-\institute{Network Science \& Geopolitics Department}
+\definecolorstyle{AcademicModern}{
+	\definecolor{colorOne}{HTML}{F8FAFC}   
+	\definecolor{colorTwo}{HTML}{E2E8F0}   
+	\definecolor{colorThree}{HTML}{1E1B4B} 
+	\colorlet{backgroundcolor}{colorOne}
+	\colorlet{blocktitlebgcolor}{colorTwo}
+	\colorlet{blocktitlefgcolor}{primary}
+	\colorlet{blockbodybgcolor}{white}
+	\colorlet{blockbodyfgcolor}{black}}
+
+\newcommand{\boldemeq}[1]{{\color{accent}\bm{#1}}}
+
+\usetheme{Board}
+\usecolorstyle{AcademicModern}
 
 \begin{document}
-	\begin{frame}[t] 
-		
-		\begin{tcolorbox}[colback=red!75!black, colframe=black, arc=0mm]
-			\centering
-			\color{white}
-			\Huge \textbf{Fragmentation Dynamics in Global Trade} \\
-			\Large \textit{G7 vs. BRICS+: Decoupling, Re-routing, and Systemic Vulnerability (2010--2024)}
-		\end{tcolorbox}
-		
-		\vspace{1cm}
-		
-		\begin{columns}[t,onlytextwidth] % Three-column layout, use full width
-			
-			% --- COLUMN 1 ---
-			\begin{column}{.32\textwidth}
-				
-				\begin{block}{1. Introduction: Rupture of the "Flat World"}
-					The post-Cold War "flat world" paradigm of seamless global markets is fracturing. Recent systemic crises—the US-China trade war, COVID-19, and the Ukraine invasion—have replaced market efficiency with a "logic of security" and dirigiste industrial policy.
-				\end{block}
-				\vfill
-				\begin{block}{2. The Five Hypotheses}
-					\begin{itemize}
-						\item \textbf{H1 Strategic Decoupling:} Declining G7--BRICS+ bilateral trade.
-						\item \textbf{H2 Connector Stability:} Invariant structural hub positions.
-						\item \textbf{H3 Bloc Fragmentation:} Multi-polar modularity ($Q$).
-						\item \textbf{H4 Geopolitical Alignment:} Clusters aligning with blocs.
-						\item \textbf{H5 Systemic Fragility:} Vulnerability via bottlenecks.
-					\end{itemize}
-				\end{block}
-				\vfill
-				\begin{block}{3. Data \& Methodology}
-					Analyzing WITS/UN Comtrade flows (2010--2024):
-					\begin{itemize}
-						\item \textbf{Network Modularity ($Q$)} \& \textbf{Leiden Algorithm} for clustering.
-						\item \textbf{Adjusted Rand Index (ARI)} for geopolitical alignment.
-						\item \textbf{Resilience Loss Index (RLI)} via global efficiency $E_t$.
-					\end{itemize}
-				\end{block}
-				\vfill
-			\end{column}
-			
-			% --- COLUMN 2 ---
-			\begin{column}{.32\textwidth}
-				
-				\begin{block}{4. Visual Analysis: Decoupling vs. Connectivity}
-					\centering
-					\includegraphics[width=0.9\textwidth]{G7_BRICS_Decoupling_Figure.pdf}
-					\captionof{figure}{\textbf{Direct Decoupling:} G7--BRICS+ trade share contracted 21\% since 2010. Annual proportional decline of $\sim$1.8\% ($\beta = -0.0177, p<0.001$).}
+	\maketitle
+	
+	\begin{columns}
+		% --- COLUMN 1: Introduction & Hypotheses ---
+		\column{0.25}
+			\block{Introduction}{				
+				\begin{itemize}
+					\item \textbf{The Post-Cold War Paradigm:} The era of hyperglobalization was defined by market efficiency superseding Westphalian security concerns \cite{friedman2005}.
 					
-					\vspace{0.8cm}
+					\item \textbf{Systemic Rupture:} The liberal consensus is destabilized by:
+					\begin{itemize}
+						\item \textbf{U.S.--China trade war:} Strategic decoupling.
+						\item \textbf{COVID-19 pandemic:} Supply chain brittleness.
+						\item \textbf{Invasion of Ukraine:} Weaponized interdependence.
+					\end{itemize}
 					
-					\includegraphics[width=0.9\textwidth]{H3_Modularity.pdf}
-					\captionof{figure}{\textbf{Inertial Integration:} $Q$ remains negative ($-0.015 > Q > -0.031$), proving G7 and BRICS+ are topologically inseparable despite decoupling.}
-				\end{block}
-				\vfill
-				\begin{tcolorbox}[colback=blue!5, colframe=blue!75!black, title=The Stability Triad]
-					USA ($S_i=0.92$), China ($S_i=0.78$), and France ($S_i=0.77$) maintain invariant structural hub positions. Logistical path dependency protects these nodes from political turmoil.
-				\end{tcolorbox}
-				\vfill
-			\end{column}
+					\item \textbf{Research Question:} Is the global system structurally bifurcating into rival blocs or merely adapting routes within a singular integrated topology?
+					
+					\item \textbf{Approach:} Moving beyond gravity models toward \textbf{Network Topology Analysis} to identify shifts from global integration to modular intra-bloc structures.
+				\end{itemize}
+			}
 			
-			% --- COLUMN 3 ---
-			\begin{column}{.32\textwidth}
+			\block{Research Hypotheses}{
+			\textbf{H1: G7--BRICS Strategic Decoupling} \\
+			Quantifying the trade relationship using bilateral export data:
+			\begin{center}
+				\[ \boldemeq{ S_t = \frac{\sum_{i \in \mathcal{G}} \sum_{j \in \mathcal{B}} X_{i,j,t} + \sum_{i \in \mathcal{B}} \sum_{j \in \mathcal{G}} X_{i,j,t}}{\sum_{i} \sum_{j} X_{i,j,t}} } \]
+			\end{center}
+			
+			\textbf{H2: Consensus Connector Stability} \\
+			Structural influence measured through weighted betweenness centrality:
+			\begin{center}
+				\[ \boldemeq{ S_i = 1 - \frac{\sigma_{BC}}{\mu_{BC}} } \]
+			\end{center}
+			
+			\textbf{H3: Network Modularity} \\
+			Newman-Girvan modularity index to detect systemic fragmentation:
+			\begin{center}
+				\[ \boldemeq{ Q_t = \frac{1}{2m_t} \sum_{i,j} \left( A_{ij}^t - \frac{k_i^t k_j^t}{2m_t} \right) \delta(c_i, c_j) } \]
+			\end{center}
+			
+			\textbf{H4: Community Alignment} \\
+			Validation via Z-scores derived from Monte Carlo permutations:
+			\begin{center}
+				\[ \boldemeq{ Z = \frac{ARI_{obs} - \mu_{null}}{\sigma_{null}} } \]
+			\end{center}
+			
+			\textbf{H5: Systemic Fragility} \\
+			Resilience Loss Index (RLI) based on global network efficiency:
+			\begin{center}
+				\[ \boldemeq{ \text{RLI}_t = 1 - \frac{E_t(\mathcal{G}_t \setminus \mathcal{C}_t)}{E_t(\mathcal{G}_t)} } \]
+			\end{center}
+		}
+		
+		% --- COLUMN 2: Visualizations & Conclusion ---
+		\column{0.75}
+			\block{The Decline of G7--BRICS+ Trade Interdependence}{
+				\begin{center}
+					\includegraphics[width=0.9\linewidth]{G7_BRICS_Decoupling_Figure.pdf}
+					\captionof{figure}{\textbf{Declining G7--BRICS+ Trade Integration (2010--2024).} 
+						Panel (a) shows trade share $S_t$; Panel (b) shows directional flows. 
+						Shaded area highlights post-2018 decoupling.}
+					\label{fig:G7_BRICS}
+				\end{center}
 				
-				\begin{block}{5. "Inertial Integration"}
-					The global economy exhibits a state where the topological core remains unified even as bilateral ties fray.
-					\begin{itemize}
-						\item \textbf{Prohibitive Costs:} Reconfiguring deeply embedded manufacturing networks is too expensive.
-						\item \textbf{Functional Necessity:} Cross-bloc dependence on rare earths, semiconductors, and APIs.
-					\end{itemize}
-				\end{block}
-				\vfill
-				\begin{block}{6. Realignment \& Resilience Loss}
-					The \textbf{Resilience Loss Index (RLI)} and \textbf{ARI} reveal:
-					\begin{itemize}
-						\item \textbf{2024 Realignment:} ARI spiked to 0.28 ($Z=3.06, p<0.01$), signaling "re-binarization" along geopolitical lines.
-						\item \textbf{Resilience Correction:} RLI dipped in 2024 (0.089) as states diversified sourcing to reduce bottleneck dependency.
-					\end{itemize}
-					\centering
-					\includegraphics[width=0.85\textwidth]{RLI_ZScore.pdf}
-				\end{block}
-				\vfill
-				\begin{block}{7. Conclusions}
-					\begin{enumerate}
-						\item \textbf{"Inertial Integration":} Functional necessity of cross-bloc ties prevents modular fragmentation ($Q < 0$).
-						\item \textbf{Structural Power:} Invariant hubs (G7/BRICS+) remain resilient to manufacturing redistribution.
-						\item \textbf{The 2024 Inflection:} Unprecedented geopolitical alignment (ARI) signals the collapse of the "flat world" and a shift toward a less efficient, but potentially more resilient, bipolared order.
-					\end{enumerate}
-				\end{block}
-				\vfill
-				\begin{tcolorbox}[colback=gray!5, title=References]
-					\tiny
-					[1] WITS World Bank Trade Data (2024). \\ \relax
-					[2] Farrell \& Newman (2019) "Weaponized Interdependence". \\ \relax
-					[3] Friedman (2005) "The World is Flat". \\ \relax
-					[4] Baldwin (2016) "The Great Convergence".
-				\end{tcolorbox}
-				\vfill
-			\end{column}
+				\begin{itemize}
+					\item \textbf{Significant Trade Contraction:} The G7--BRICS+ share of global trade ($S_t$) fell from 6.1\% (2010) to 4.8\% (2024), marking a 21\% reduction in inter-bloc integration.
+					\item \textbf{Negative Growth Trend:} Log-linear regression identifies an annual proportional decline of $\approx$1.8\% ($\beta = -0.0177, p < 0.001$), indicating a steady erosion of economic ties.
+					\item \textbf{Post-2018 Structural Break:} Analysis reveals a significant hiatus coinciding with U.S.-China tensions; the post-2018 average trade share dropped by $\Delta S = -0.72$ percentage points ($p = 0.0006$).
+					\item \textbf{Decoupling Toll:} The 2024 trade share is 1.67\% lower than levels projected by pre-2018 trajectories, quantifying the cumulative impact of geopolitical decoupling.
+					\item \textbf{Increased Volatility:} Post-2018 trade flow variance increased by a factor of 3.60, reflecting the growing influence of non-economic factors like sanctions and supply chain security.
+					\item \textbf{Robustness Testing:} Placebo testing (2014) showed minimal impact, confirming that the structural shift is uniquely linked to post-2018 geopolitical fragmentation.
+				\end{itemize}
+			}
+			
+			\block{The Persistence of Strategic Trade Intermediaries}{
+				\begin{itemize}
+					\item \textbf{The ``Stability Triad'':} Network centrality analysis identifies the USA, China, and France as the dominant global brokers, consistently maintaining mean betweenness scores $> 0.025$.
+					\item \textbf{US Structural Invariance:} The USA remains the primary coordinate for transatlantic and transpacific trade with the highest stability index ($S_i = 0.92$).
+					\item \textbf{European Anchors:} France ($S_i = 0.77$) has emerged as a stability anchor, slightly surpassing Germany ($S_i = 0.74$) due to its institutional role in the EU and Francophone networks.
+					\item \textbf{Logistical Gatekeepers:} Mid-tier economies like the Netherlands ($S_i = 0.80$) and Spain ($S_i = 0.83$) function as ``stabilizing bridges,'' where port and financial infrastructure protect nodes from geopolitical turmoil.
+					\item \textbf{Structural Endpoint Paradox:} Emerging manufacturing hubs like Vietnam ($S_i = -0.66$) and Mexico ($S_i = 0.33$) exhibit near-zero brokerage centrality ($BC < 0.0004$), acting as production endpoints rather than systemic intermediaries.
+					\item \textbf{Systemic Influence vs. Volume:} Results indicate that high export volumes do not automatically translate into structural power; systemic influence depends on a state's role as a bridge between disconnected partners.
+				\end{itemize}
+			
+			}
+			
+			\block{The Absence of Network Fragmentation}{
+				\begin{center}
+					\includegraphics[width=\linewidth]{H3_Modularity.pdf}
+					\caption{\textbf{Absence of Structural Fragmentation, 2010--2024.} 
+						Negative modularity ($Q$) indicates that G7 and BRICS+ economies remain structurally connected across blocs despite geopolitical tensions.}
+					\label{fig:H3}
+				\end{center}
+				\begin{itemize}
+					\item \textbf{Rejection of Fragmentation (H3):} Despite declining bilateral trade, the global system has not split into discrete regional blocs. Mann-Kendall tests confirm no significant increase in modularity ($p = 0.075$).
+					\item \textbf{Persistent Negative Modularity:} The network maintains a "disassortative" arrangement ($-0.015 > Q > -0.031$), indicating that G7 and BRICS+ economies remain structurally inseparable and continue to trade across bloc boundaries.
+					\item \textbf{Functional Complementarity:} Deep-seated dependencies—such as German reliance on Chinese rare earths and U.S. need for Indian pharmaceuticals—create manufacturing ties that political will alone cannot easily reconfigure.
+					\item \textbf{Crisis-Induced Integration:} During the COVID-19 pandemic, modularity reached its most negative value ($Q = -0.031$), suggesting that supply chain stress actually forces states to leverage existing cross-bloc interdependencies.
+					\item \textbf{Inertial Integration:} Geopolitical shocks (2018 Trade War, 2022 Ukraine Invasion) failed to trigger positive modularity, revealing a topological core that remains unified despite "de-risking" rhetoric.
+					\item \textbf{Prohibitive Decoupling Costs:} The absence of fragmentation suggests that the logistical and economic costs of restructuring core supply chain networks are currently prohibitive for major powers.
+				\end{itemize}
+			}
+			
+			\block{The Emergence of Geopolitical Bloc Formation}{
+				\begin{center}
+					\includegraphics[width=0.80\linewidth]{trade_alignment_ari_zscore.pdf}
+					\caption{\textbf{Geopolitical Realignment of Global Trade, 2010--2024.} }
+				\end{center}
+				\begin{itemize}
+					\item \textbf{2024 Regime Shift:} Community detection algorithms reveal a fundamental shift from ``bloc-blind'' trade to alignment based on geopolitical orientation ($Z\text{-score} = 3.06, \, p < 0.01$).
+					
+					\item \textbf{Historical Baseline (2010--2023):} Trade was previously driven by economic complementarity and profit rather than strategy, with low correlation between trade clusters and political blocs ($\text{ARI} < 0.15$).
+					
+					\item \textbf{Rapid Re-binarization:} In 2024, the alignment index leaped to $\text{ARI} = 0.28$, indicating that states are now significantly more likely to trade with ``like-minded'' partners within their own bloc.
+					
+					\item \textbf{Drivers of Realignment:} This crystallization is fueled by the 2023 BRICS+ expansion and G7 ``de-risking'' policies (e.g., CHIPS Act, Critical Raw Materials Act), mirroring a Cold War-style bipolar topology.
+					
+					\item \textbf{The ARI-Modularity Paradox:} While the system remains topologically unified (negative modularity), bilateral flows are increasingly concentrated within blocs (rising ARI), marking a transition from hyperglobalization to strategic alignment.
+					
+					\item \textbf{End of an Era:} These trends suggest the conclusion of the post-1991 era, replaced by a system where logistical connectivity persists despite a heavy geopolitical overlay on trade choices.
+				\end{itemize}
+			}
+			
+			\block{The Evolution of Systemic Vulnerability}{
+				\begin{center}
+					\includegraphics[width=\linewidth]{RLI_ZScore.pdf}
+					\caption{\textbf{Temporal Evolution of Systemic Vulnerability, 2010--2024.} 
+						RLI measures network interruption via connector removal; higher values denote fragility. 
+						The 2023 peak highlights reliance on bottlenecks, while the 2024 dip reflects diversification efforts.}
+					\label{fig:RLI}
+				\end{center}
+				\begin{itemize}
+					\item \textbf{Systemic Fragility (H5):} Analysis confirms a 15-year trajectory of increasing vulnerability, followed by a recent shift toward restructuring and diversification.
+					\item \textbf{The Efficiency-Resilience Trade-off:} From 2010 to 2023, the Resilience Loss Index (RLI) rose by 18.5\% (0.081 to 0.096), reflecting a global system increasingly dependent on a restricted set of structural bottlenecks.
+					\item \textbf{Diffuse Vulnerability:} Non-significant Z-scores (between -1.0 and 1.0) suggest that fragility is not limited to "super-connectors" but is a diffuse characteristic across a broad class of neutral intermediary nodes.
+					\item \textbf{The 2024 Inflection Point:} The RLI saw its first significant decrease in a decade (falling to 0.089), signaling an incipient move toward supply chain diversification and "China Plus One" strategies.
+					\item \textbf{Systemic Recoupling:} Recent implementation of industrial policies and export controls indicates that state intervention is beginning to counterbalance market-driven concentration, prioritizing security over pure efficiency.
+					\item \textbf{Future Outlook:} The 2024 downturn raises a critical question: is this the start of a permanent shift toward a more resilient, albeit more expensive, global trading framework?
+				\end{itemize}
+			}
+			
+		\block{Conclusion}{
+			\begin{itemize}
+				\item \textbf{Inertial Integration:} Despite "weaponized" interdependence, the trade network shows high resistance to modular fragmentation. Persistent negative modularity reflects functional complementarities in minerals, semiconductors, and pharmaceuticals that exceed current political will for decoupling.
+				\item \textbf{Structural vs. Material Power:} Systemic influence remains rooted in institutional capacity and logistical geography. While Vietnam and Mexico have grown as manufacturing hubs, they remain "structural endpoints" rather than autonomous intermediaries like the \textit{Stability Triad} (USA, China, France).
+				\item \textbf{2024 Structural Rupture:} Data signals the end of "bloc-blind" commerce. A surge in the Adjusted Rand Index (ARI) alongside the first decade-long dip in the Resilience Loss Index (RLI) suggests a fundamental rewiring of the global trade topology.
+				\item \textbf{Strategic Trade-off:} The global order is shifting from the efficiency-led "hyperglobalization" of the post-1991 era to a "re-binarized" system that prioritizes security and resilience, albeit at higher transaction costs.
+				\item \textbf{Role of Bridge Nations:} The future stability of the international order depends on "stabilizing bridges" (e.g., Netherlands, Spain) to maintain the attenuating threads of cross-bloc connectivity in a high-friction, bipolar world.
+			\end{itemize}
+		}
 		\end{columns}
-		
-	\end{frame}
 \end{document}
